--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-28 19:24+0200\n"
+"POT-Creation-Date: 2025-04-28 22:57+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -334,14 +334,15 @@ msgstr "Попробуй прямо сейчас — это просто и да
 msgid "Create payment links for selected tariffs in all languages (atomically)"
 msgstr "Создать ссылки для оплаты выбранных тарифов на всех языках (атомарно)"
 
-#: subscription/admin_actions.py:38
+#: subscription/admin_actions.py:39
 msgid ""
 "Payment links for all selected plans in all languages have been created "
 "successfully"
-msgstr "Ссылки на оплату для всех выбранных планов на всех языках были созданы "
+msgstr ""
+"Ссылки на оплату для всех выбранных планов на всех языках были созданы "
 "успешно"
 
-#: subscription/admin_actions.py:44
+#: subscription/admin_actions.py:45
 msgid "Error creating links: "
 msgstr "Ошибка создания ссылок"
 
@@ -389,6 +390,18 @@ msgstr "Анализ завершён"
 #: telegram/handlers/messages/photos.py:58
 msgid "Analysis error"
 msgstr "Ошибка анализа"
+
+#: telegram/handlers/payments/base.py:34
+msgid "The specified tariff plan was not found."
+msgstr "Указанный тарифный план не найден"
+
+#: telegram/handlers/payments/base.py:61
+msgid "Subscription successfully completed"
+msgstr "Подписка успешно оформлена"
+
+#: telegram/models.py:48
+msgid "Successful"
+msgstr "Успешно"
 
 #: telegram/handlers/share/users.py:24
 msgid "You must be the owner of a room to add users to it"
