--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-30 18:58+0200\n"
+"POT-Creation-Date: 2025-05-01 20:41+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -31,6 +31,11 @@ msgstr "Mes"
 msgid "Year"
 msgstr "Año"
 
+#: receipt/admin.py:30 receipt/forms.py:32
+#: section/templates/section/inc/menu/_currency.html:54
+msgid "Currency"
+msgstr "Código de la moneda"
+
 #: receipt/admin.py:46
 msgid "Preview"
 msgstr "Vista previa"
@@ -39,15 +44,58 @@ msgstr "Vista previa"
 msgid "Color preview"
 msgstr "Vista previa del color"
 
-#: section/admin.py:20
-msgid "Count of users"
-msgstr "Cantidad de usuarios"
+#: receipt/forms.py:21
+msgid "Date"
+msgstr "Fecha"
 
+#: receipt/forms.py:30
+msgid "Section"
+msgstr "Sección"
+
+#: receipt/forms.py:31
+msgid "Shop"
+msgstr "Tienda"
+
+#: receipt/forms.py:61
+msgid "The Date field is required"
+msgstr "El campo de fecha es obligatorio"
+
+#: receipt/forms.py:65
+msgid "The date cannot be in the future"
+msgstr "La fecha no puede estar en el futuro"
+
+#: receipt/forms.py:88
+msgid "The receipt must contain at least one item"
+msgstr "El recibo debe contener al menos un artículo"
+
+#: receipt/templates/receipt/receipt_form.html:53
+#: section/templates/section/inc/main/feed/_receipts.html:30
+#: templates/i18n.html:4
+msgid "Total"
+msgstr "Total"
+
+#: receipt/templates/receipt/receipt_form.html:62
+msgid "Add item"
+msgstr "Agregar artículo"
+
+#: receipt/templates/receipt/receipt_form.html:71
 #: section/templates/section/inc/_save.html:2
 #: section/templates/section/inc/menu/_currency.html:101
 #: section/templates/section/inc/menu/_section_name.html:21
 msgid "Save"
 msgstr "Guardar"
+
+#: receipt/templates/receipt/receipt_form.html:78
+msgid "Delete this receipt?"
+msgstr "¿Eliminar este recibo?"
+
+#: receipt/templates/receipt/receipt_form.html:79
+msgid "Delete receipt"
+msgstr "Eliminar recibo"
+
+#: section/admin.py:20
+msgid "Count of users"
+msgstr "Cantidad de usuarios"
 
 #: section/templates/section/inc/account/plans.html:15
 msgid "Start"
@@ -281,11 +329,6 @@ msgstr ""
 msgid "Expenses"
 msgstr "Gastos"
 
-#: section/templates/section/inc/main/feed/_receipts.html:30
-#: templates/i18n.html:4
-msgid "Total"
-msgstr "Total"
-
 #: section/templates/section/inc/main/feed/_receipts_empty.html:4
 msgid "No available spending"
 msgstr "No hay gastos disponibles"
@@ -382,15 +425,15 @@ msgstr "Idioma actualizado"
 msgid "Language not updated"
 msgstr "Idioma no actualizado"
 
-#: telegram/handlers/common.py:23
+#: telegram/handlers/common.py:19
 msgid "Open the app"
 msgstr "Abre la aplicación"
 
-#: telegram/handlers/common.py:25
+#: telegram/handlers/common.py:21
 msgid "Main page"
 msgstr "Página principal"
 
-#: telegram/handlers/common.py:26 user/models.py:34
+#: telegram/handlers/common.py:22 user/models.py:34
 msgid "Language"
 msgstr "Idioma"
 
@@ -404,7 +447,7 @@ msgstr ""
 msgid "Hello"
 msgstr "Hola"
 
-#: telegram/handlers/messages/messages.py:24
+#: telegram/handlers/messages/messages.py:23
 #: telegram/handlers/messages/photos.py:34
 msgid "In line"
 msgstr "En la cola"
