--- a/locale/uk/LC_MESSAGES/django.po
+++ b/locale/uk/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-30 18:58+0200\n"
+"POT-Creation-Date: 2025-05-01 20:41+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -33,7 +33,8 @@ msgstr "Місяць"
 msgid "Year"
 msgstr "Рік"
 
-#: receipt/admin.py:30 section/templates/section/inc/menu/_currency.html:54
+#: receipt/admin.py:30 receipt/forms.py:32
+#: section/templates/section/inc/menu/_currency.html:54
 msgid "Currency"
 msgstr "Валюта"
 
@@ -45,15 +46,58 @@ msgstr "Попередній перегляд"
 msgid "Color preview"
 msgstr "Попередній перегляд кольору"
 
-#: section/admin.py:20
-msgid "Count of users"
-msgstr "Кількість користувачів"
+#: receipt/forms.py:21
+msgid "Date"
+msgstr "Дата"
 
+#: receipt/forms.py:30
+msgid "Section"
+msgstr "Кімната"
+
+#: receipt/forms.py:31
+msgid "Shop"
+msgstr "Магазин"
+
+#: receipt/forms.py:61
+msgid "The Date field is required"
+msgstr "Поле дати є обов’язковим"
+
+#: receipt/forms.py:65
+msgid "The date cannot be in the future"
+msgstr "Дата не може бути в майбутньому"
+
+#: receipt/forms.py:88
+msgid "The receipt must contain at least one item"
+msgstr "Чек повинен містити щонайменше один товар"
+
+#: receipt/templates/receipt/receipt_form.html:53
+#: section/templates/section/inc/main/feed/_receipts.html:30
+#: templates/i18n.html:4
+msgid "Total"
+msgstr "Разом"
+
+#: receipt/templates/receipt/receipt_form.html:62
+msgid "Add item"
+msgstr "Додати товар"
+
+#: receipt/templates/receipt/receipt_form.html:71
 #: section/templates/section/inc/_save.html:2
 #: section/templates/section/inc/menu/_currency.html:101
 #: section/templates/section/inc/menu/_section_name.html:21
 msgid "Save"
 msgstr "Зберегти"
+
+#: receipt/templates/receipt/receipt_form.html:78
+msgid "Delete this receipt?"
+msgstr "Видалити цей чек?"
+
+#: receipt/templates/receipt/receipt_form.html:79
+msgid "Delete receipt"
+msgstr "Видалити чек"
+
+#: section/admin.py:20
+msgid "Count of users"
+msgstr "Кількість користувачів"
 
 #: section/templates/section/inc/account/plans.html:15
 msgid "Start"
@@ -282,11 +326,6 @@ msgstr ""
 msgid "Expenses"
 msgstr "Витрати"
 
-#: section/templates/section/inc/main/feed/_receipts.html:30
-#: templates/i18n.html:4
-msgid "Total"
-msgstr "Всього"
-
 #: section/templates/section/inc/main/feed/_receipts_empty.html:4
 msgid "No available spending"
 msgstr "Немає доступних витрат"
@@ -381,15 +420,15 @@ msgstr "Мова оновлена"
 msgid "Language not updated"
 msgstr "Мова не оновлена"
 
-#: telegram/handlers/common.py:23
+#: telegram/handlers/common.py:19
 msgid "Open the app"
 msgstr "Відкрити додаток"
 
-#: telegram/handlers/common.py:25
+#: telegram/handlers/common.py:21
 msgid "Main page"
 msgstr "Головна сторінка"
 
-#: telegram/handlers/common.py:26 user/models.py:34
+#: telegram/handlers/common.py:22 user/models.py:34
 msgid "Language"
 msgstr "Мова"
 
@@ -397,13 +436,15 @@ msgstr "Мова"
 msgid ""
 "You can't perform this action, please check your subscription limits and "
 "capabilities"
-msgstr "Ви не можете виконати цю дію. Перевірте обмеження та можливості вашої підписки."
+msgstr ""
+"Ви не можете виконати цю дію. Перевірте обмеження та можливості вашої "
+"підписки."
 
 #: telegram/handlers/messages/commands.py:21
 msgid "Hello"
 msgstr "Привіт"
 
-#: telegram/handlers/messages/messages.py:24
+#: telegram/handlers/messages/messages.py:23
 #: telegram/handlers/messages/photos.py:34
 msgid "In line"
 msgstr "У черзі"
