--- a/locale/uk/LC_MESSAGES/django.po
+++ b/locale/uk/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-05-01 20:56+0200\n"
+"POT-Creation-Date: 2025-05-26 22:39+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -444,9 +444,20 @@ msgstr ""
 "Ви не можете виконати цю дію. Перевірте обмеження та можливості вашої "
 "підписки."
 
-#: telegram/handlers/messages/commands.py:21
-msgid "Hello"
-msgstr "Привіт"
+#: telegram/handlers/messages/commands.py:27
+msgid ""
+"Hello!\n"
+"Finance Lens is a bot for tracking your expenses.\n"
+"\n"
+"Send me a photo of a receipt or a free-form text description of your "
+"expense, and I will analyze it and show a chart in the web app via the "
+"button below."
+msgstr ""
+"Привіт!\n"
+"Finance Lens — це бот для відстеження ваших витрат.\n"
+"\n"
+"Надішліть мені фото чека або текстовий опис витрати у вільній формі, "
+"я проаналізую його та покажу графік у веб-застосунку за кнопкою нижче."
 
 #: telegram/handlers/messages/messages.py:23
 #: telegram/handlers/messages/photos.py:34
@@ -528,3 +539,6 @@ msgstr "Повідомлення"
 #: user/templates/user/feedback_form.html:15
 msgid "Send"
 msgstr "Надіслати"
+
+#~ msgid "Hello"
+#~ msgstr "Привіт"
